ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-apps-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
    - hosts:
        - somsnation.me
        - www.somsnation.me
      secretName: portfolio-tls
    - hosts:
        - cms.somsnation.me
      secretName: cms-tls
  rules:
    - host: somsnation.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-service
                port:
                  number: 80
    - host: cms.somsnation.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cms-web-service
                port:
                  number: 3000
